Add get user by email
