# midas-backend/src/controllers/user.controller.ts
@@ -1,6 +1,6 @@
 import { Get, Route, Tags,  Post, Body, Path } from "tsoa";
 import {User} from '../models'
-import {getUsers, createUser, IUserPayload, getUser} from '../repositories/user.repository'
+import {getUsers, createUser, IUserPayload, getUser, getUserByEmail} from '../repositories/user.repository'
 
 @Route("users")
 @Tags("User")
@@ -18,5 +18,10 @@ export default class UserController {
   @Get("/:id")
   public async getUser(@Path() id: string): Promise<User | null> {
     return getUser(Number(id))
+  }
+
+  @Get("/email/:email")
+  public async getUserByEmail(@Path() email: string): Promise<User | null> {
+    return getUserByEmail(email)
   }
 }
